# ProjectActiveTask

./: .gitignore  .gitlab-ci.yml  .lgtm.yml  CMakeLists.txt  README.md  gitlab-ci.yml
cmake/: CompilerWarnings.cmake  Conan.cmake  StandardProjectSettings.cmake
include/ActiveTask/: ActiveTask.h  CMakeLists.txt
test/: CMakeLists.txt  test.cpp
